# wrtools-core

./: .gitignore  .stow-local-ignore  .travis.yml  CODE_OF_CONDUCT.md  Makefile.in  README.md  README.txt  configure  configure-helper.bash  configure.ac  stow.mk.in  todo.txt  unconfigured.mk  zip.mk.in
share/wrtools-core/: opt_verbose.bash  temp.bash
src/bash/: common.bash  fail.bash  opt_help.bash  opt_verbose.bash  temp.bash
src/lib/bash/: command-path.bash  exit_hook.bash  fail.bash  opt_help.bash  opt_verbose.bash  temp.bash
src/share/: paranoia.bash
src/share/wrtools-core/: command-path.bash  fail.bash  opt_help.bash  opt_verbose.bash  paranoia.bash  rc  script.bash  temp.bash
